# qmpp-discord

./: .gitignore  CMakeLists.txt  README.md  build.sh  discordipc.cpp  discordipc.h  discordrichpresence.cpp  discordrichpresence.h  discordrichpresencefactory.cpp  discordrichpresencefactory.h  settingsdialog.cpp  settingsdialog.h
packaging/aur/: .SRCINFO  PKGBUILD  README.md
